# VulkanTriangleRGB

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  compile.bat  imgui.ini
app/assets/shaders/: default_mesh.vert
app/assets/shaders/spirv/: default_mesh_vert.spv
app/src/: configurations.h  main.cpp  pre-compiled-header.h  vk_defines.cpp  vk_defines.h  vk_engine.cpp  vk_engine.h  vk_mesh.cpp  vk_mesh.h  vk_resources.cpp  vk_resources.h  vk_utils.cpp  vk_utils.h
